--- a/app/src/main/res/layout/group_list_item.xml
+++ b/app/src/main/res/layout/group_list_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffffff">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="71dp"
-        android:background="#0000"
+        android:background="#00000000"
         android:id="@+id/frame">
 
         <TextView
@@ -19,6 +20,31 @@
             android:textColor="#ff000000"
             android:textStyle="normal"
             android:textSize="20dp"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="90dp" />
+
+        <FrameLayout
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/color_letter">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A"
+                android:id="@+id/First_Lettter_Group_Name"
+                android:layout_gravity="center"
+                android:textSize="30dp"
+                android:textColor="#ffffffff"
+                android:textStyle="italic" />
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/imageView"
+                android:layout_gravity="center"
+                android:adjustViewBounds="false" />
+        </FrameLayout>
     </FrameLayout>
 </LinearLayout>
