--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -1,5 +1,6 @@
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.alex.nuryschedulev2.TextViewPlus xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:foo="http://schemas.android.com/apk/res-auto"
     android:id="@+id/text"
     android:layout_width="match_parent"
     android:layout_height="60dp"
@@ -10,4 +11,6 @@
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="#ff464646"
     android:text="testText"
-    android:textSize="20dp" />
+    android:textSize="20dp"
+    foo:customFont="segoe_ui_regular.ttf"
+    />
