--- a/app/src/main/res/layout/group_list_item.xml
+++ b/app/src/main/res/layout/group_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:foo="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,16 +12,17 @@
         android:background="#00000000"
         android:id="@+id/frame">
 
-        <TextView
+        <com.example.alex.nuryschedulev2.TextViewPlus
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="GroupName"
             android:id="@+id/groupName"
             android:layout_gravity="left|center_vertical"
             android:textColor="#ff000000"
-            android:textStyle="normal"
             android:textSize="20dp"
-            android:layout_marginLeft="90dp" />
+            android:layout_marginLeft="90dp"
+            foo:customFont="segoe_ui_regular.ttf">
+        </com.example.alex.nuryschedulev2.TextViewPlus>
 
         <FrameLayout
             android:layout_width="70dp"
@@ -29,15 +31,15 @@
             android:layout_marginLeft="10dp"
             android:id="@+id/color_letter">
 
-            <TextView
+            <com.example.alex.nuryschedulev2.TextViewPlus
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="A"
                 android:id="@+id/First_Lettter_Group_Name"
                 android:layout_gravity="center"
                 android:textSize="30dp"
                 android:textColor="#ffffffff"
-                android:textStyle="italic" />
+                foo:customFont="segoe_ui_light.ttf">
+            </com.example.alex.nuryschedulev2.TextViewPlus>
 
             <ImageView
                 android:layout_width="fill_parent"
