--- a/app/src/main/res/drawable/activated_background.xml
+++ b/app/src/main/res/drawable/activated_background.xml
@@ -3,7 +3,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <item android:drawable="@color/light_red" android:state_pressed="true"/>
+    <item android:drawable="@color/red" android:state_pressed="true"/>
     <item android:drawable="@android:color/transparent"/>
 
 </selector>
