--- a/app/src/main/res/layout/drawer_list_header.xml
+++ b/app/src/main/res/layout/drawer_list_header.xml
@@ -22,4 +22,16 @@
         android:textSize="20dp"
         android:textColor="#ffffffff"
         foo:customFont="segoe_ui_regular.ttf"/>
+
+    <com.example.alex.nuryschedulev2.TextViewPlus
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/current_day"
+        android:layout_gravity="right"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="20dp"
+        android:textSize="30dp"
+        android:textColor="#ffffffff"
+        foo:customFont="segoe_ui_regular.ttf"/>
 </FrameLayout>
