--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,7 +3,7 @@
 
     <item name="blue" type="color">#FF33B5E5</item>
     <item name="red" type="color">#c5da1308</item>
-    <item name="light_red" type="color">#C5FFCFBC</item>
+    <item name="light4_red" type="color">#C5FFCFBC</item>
     <item name="clear" type="color">#00FFFFFF</item>
     <item name="black" type="color">#FF000000</item>
     <item name="toolBar_color" type="color">#ffe10207</item>
